@startuml

title __SERVICES's Class Diagram__\n

  namespace omsu.imit {
    namespace services {
      class omsu.imit.services.InnService {
          ~ gson : Gson
          - LOGGER : Logger
          - errCount : AtomicInteger
          + amountOfInn()
          + deleteAllInn()
          + deleteInnById()
          + deleteInnByObj()
          + getInfoAboutAllInn()
          + getInfoAboutCertainInn()
          + insertInn()
      }
    }
  }
  

  namespace omsu.imit {
    namespace services {
      class omsu.imit.services.KktService {
          ~ gson : Gson
          - LOGGER : Logger
          - attemptsCount : AtomicInteger
          - isErr : AtomicBoolean
          - isUpdating : AtomicBoolean
          + deleteAllKktByInn()
          + getAllKktByInn()
          + getIsErr()
          + getIsUpdating()
          + getKktByid()
          + insertOrUpdateKktFromInn()
      }
    }
  }
  

  namespace omsu.imit {
    namespace services {
      class omsu.imit.services.OfdService {
          - LOGGER : Logger
          - restTemplate : RestTemplate
          + OfdService()
          + deleteOldReports()
          + getPostsPlainJSON()
      }
    }
  }
  

  namespace omsu.imit {
    namespace services {
      class omsu.imit.services.ReceiptService {
          ~ gson : Gson
          ~ mapper : ObjectMapper
          - LOGGER : Logger
          - amountOfTries : AtomicInteger
          - isErr : AtomicBoolean
          - isUpdating : AtomicBoolean
          + createXls()
          + deleteAllReceiptByKkt()
          + findAllReceipt()
          + getIsErr()
          + getIsUpdating()
          + getReceiptsByDate()
          + insertReceiptsFromInn()
      }
    }
  }
  

  namespace omsu.imit {
    namespace services {
      class omsu.imit.services.UserService {
          - LOGGER : Logger
          - restTemplate : RestTemplate
          - tries : AtomicInteger
          + UserService()
          + addUser()
          + getUser()
          + login()
          + loginPostPlainJSON()
          + updateUser()
      }
    }
  }
  

  omsu.imit.services.InnService .up.|> omsu.imit.interfaces.IInn
  omsu.imit.services.InnService o-- omsu.imit.interfaces.HttpRequest : httpRequest
  omsu.imit.services.InnService o-- omsu.imit.repo.InnCrudRepository : innCrudRepository
  omsu.imit.services.KktService o-- omsu.imit.interfaces.HttpRequest : httpRequest
  omsu.imit.services.KktService o-- omsu.imit.interfaces.IInn : iInn
  omsu.imit.services.KktService o-- omsu.imit.repo.KktCrudRepository : kktCrudRepository
  omsu.imit.services.OfdService .up.|> omsu.imit.interfaces.HttpRequest
  omsu.imit.services.ReceiptService o-- omsu.imit.interfaces.HttpRequest : httpRequest
  omsu.imit.services.ReceiptService o-- omsu.imit.repo.ReceiptsCrudRepository : receiptsCrudRepository
  omsu.imit.services.UserService o-- omsu.imit.repo.UserCrudRepository : userCrudRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
